# mtproto-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE_MIT  README.md  build.rs  git.exe.stackdump
examples/: auth.rs  dynamic.rs  example.rs  http_auth.rs  message.rs  tcp_auth.rs
src/: error.rs  lib.rs  manual_types.rs  utils.rs
src/rpc/: auth.rs  message.rs  mod.rs  session.rs  utils.rs
src/rpc/encryption/: asymm.rs  bignum.rs  ige.rs  mod.rs  symm.rs  utils.rs
src/rpc/functions/: mod.in.rs  mod.rs
src/tl/: bool_type.rs  dynamic.rs  error.rs  mod.rs  null_type.rs  parsing.rs  string.rs  true_type.rs  vector.rs
src/tl/complex_types/: account.rs  auth.rs  contacts.rs  error.rs  help.rs  messages.rs  mod.in.rs  mod.rs  photos.rs  storage.rs  updates.rs  upload.rs
src/tl/complex_types/auth/: checked_phone.rs  mod.rs
tests/: bool.rs  ige_test.rs  message.rs  next_message_id.rs
tl/: 001-manual.tl  minimal.tl  tl-schema-list.txt
tl_codegen/: Cargo.toml  manual.tl  scheme.tl
tl_codegen/src/: analyzer.rs  ast.rs  error.rs  generator.rs  lib.rs  parser.rs
tl_kex/: Cargo.toml
tl_kex/src/: lib.rs
tl_macros/: Cargo.toml  build.rs
tl_macros/src/: lib.in.rs  lib.rs
