[package]
name = "mtproto"
version = "0.0.1"
authors = ["Connor Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
byteorder = "1.1"
chrono = "0.4"
erased-serde = "0.3"
error-chain = "0.11"
extprim = "1.4.0"
num-traits = "0.1"
openssl = "0.9.17"
rand = "0.3"
serde = "1.0"
serde_bytes = "0.10"
serde_derive = "1.0"
serde_mtproto = { git = "https://github.com/hcpl/serde_mtproto", features = ["extprim"] }
serde_mtproto_derive = { git = "https://github.com/hcpl/serde_mtproto" }
toml = "0.4"

[build-dependencies]
tl_codegen = { path = "tl_codegen", features = ["printing"] }

[dev-dependencies]
crc = "1.5"
env_logger = "0.4"
futures = "0.1"
hyper = "0.11"
log = "0.3"
select = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
