[package]
name = "tl_codegen"
version = "0.0.1"
authors = ["Connor Hilarides <connorcpu@live.com>"]

[dependencies]
error-chain = "0.11"
pom = "1.0"
quote = { version = "0.3", optional = true }
syn = { version = "0.11", default-features = false, features = ["full"] }
synom = { version = "0.11", optional = true }

[features]
parsing = ["syn/parsing", "synom"]
printing = ["syn/printing", "quote"]
