[package]
name = "tl_codegen"
version = "0.0.1"
authors = ["Connor Hilarides <connorcpu@live.com>"]

[dependencies]
error-chain = "0.11"
petgraph = { version = "0.4", default-features = false }
pom = "1.0"
quote = "0.3"
syn = { version = "0.11", default-features = false, features = ["full", "printing"] }
synom = { version = "0.11", optional = true }

[features]
parsing = ["syn/parsing", "synom"]
