[package]
name = "tl_macros"
version = "0.1.0"
authors = ["Connor Hilarides <connorcpu@live.com>"]
build = "build.rs"

[dependencies]
syntex = "0.22"
syntex_syntax = "0.22"
aster = { version = "0.8", features = ["with-syntex"] }
quasi = { version = "0.3.8", features = ["with-syntex"] }

[build-dependencies]
syntex = "0.22"
quasi_codegen = { version = "0.3.8", features = ["with-syntex"] }
